add events to svgControls

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ARcad",
   "version": "1.0.0",
   "description": "AR cad tool for alignment of SVG's with Camera",
-  "main": "index.js",
+  "main": "build/ARcad.web.js",
   "author": "Lucas Zeer",
   "license": "MIT",
   "private": false,
@@ -20,6 +20,7 @@
     "basiccontext": "^3.5.1",
     "dat.gui": "^0.7.2",
     "express": "^4.16.3",
+    "jbone": "^1.2.1",
     "lodash": "^4.17.10",
     "perspective-transform": "^1.1.3",
     "svg-intersections": "^0.4.0",
