--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "webpack": "3"
   },
   "dependencies": {
+    "backbone": "^1.3.3",
     "basiccontext": "^3.5.1",
     "dat.gui": "^0.7.2",
     "express": "^4.16.3",
-    "jbone": "^1.2.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "perspective-transform": "^1.1.3",
     "svg-intersections": "^0.4.0",
