load css files using <link> tags

--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -1,12 +1,7 @@
 {
   "main": "main.js",
   "dependencies": {
-    "css-modules-electron": "^2.0.0",
-    "postcss": "4.1.16",
-    "postcss-modules-extract-imports": "0.0.5",
-    "postcss-modules-local-by-default": "0.0.12",
-    "postcss-modules-scope": "0.0.8",
-    "yo-yo": "^1.4.1"
+    "node-hook": "^1.0.0"
   },
   "devDependencies": {}
 }
