--- a/examples/arduino/package.json
+++ b/examples/arduino/package.json
@@ -7,8 +7,11 @@
     "install": "electron-rebuild"
   },
   "dependencies": {
-    "electron-prebuilt": "^1.4.13",
     "node-hook": "^1.0.0",
     "serialport": "^6.2.0"
+  },
+  "devDependencies": {
+    "electron-prebuilt": "^1.4.13",
+    "electron-rebuild": "^1.7.3"
   }
 }
