add stroke property in dat.gui; fix fill after deselect

--- a/examples/johnny-five/package.json
+++ b/examples/johnny-five/package.json
@@ -1,7 +1,7 @@
 {
   "name": "johnny-five",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "ferrobot2.js",
   "license": "MIT",
   "dependencies": {
     "electron-rebuild": "^1.7.3",
